# machine

./: .mxproject  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  machine.ioc
Core/Src/: main.c
